--- a/Main.html
+++ b/Main.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script defer src="/DFA_2.js"></script>
     <title>Separating Words DFA</title>
 </head>
 
@@ -17,7 +18,6 @@
     <button onclick="button_clicked()">Generate DFA(s)</button><br><br>
     
     <canvas id="canvas" width="1800" height="3600"></canvas>
-    <script src = "/DFA_2.js"></script>
 
 </body>
 
