--- a/Main.html
+++ b/Main.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="/DFA_2.js"></script>
+    <script defer src="./DFA_2.js"></script>
     <title>Separating Words DFA</title>
 </head>
 
